[gd_scene load_steps=2 format=3 uid="uid://d25ox44wljso3"]

[ext_resource type="Script" path="res://scripts/network_menu.gd" id="1_8ob5k"]

[node name="network_menu" type="CanvasLayer" node_paths=PackedStringArray("find_lobby_button", "create_lobby_button", "profile_button", "main_menu_button")]
script = ExtResource("1_8ob5k")
find_lobby_button = NodePath("ColorRect/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/FindLobby")
create_lobby_button = NodePath("ColorRect/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/CreateLobby")
profile_button = NodePath("ColorRect/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/Profile")
main_menu_button = NodePath("ColorRect/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/BackToMainMenu")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.188235, 0.14902, 0.364706, 1)

[node name="CenterContainer" type="CenterContainer" parent="ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -319.5
offset_top = -290.5
offset_right = 319.5
offset_bottom = 290.5
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="ColorRect/CenterContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="ColorRect/CenterContainer/PanelContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/CenterContainer/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="NetworkMenu" type="Label" parent="ColorRect/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Network Menu"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="ColorRect/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="FindLobby" type="Button" parent="ColorRect/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Find Lobby"

[node name="CreateLobby" type="Button" parent="ColorRect/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Create Lobby"

[node name="Profile" type="Button" parent="ColorRect/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Profile"

[node name="BackToMainMenu" type="Button" parent="ColorRect/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Back to Main Menu"
